--- a/.env.staging
+++ b/.env.staging
@@ -1,6 +1,6 @@
 DEBUG=0
 SECRET_KEY=change_me
-DJANGO_ALLOWED_HOSTS=logod.pp.ua
+DJANGO_ALLOWED_HOSTS=localhost
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=hello_django_prod
 SQL_USER=hello_django
@@ -8,6 +8,6 @@ SQL_PASSWORD=hello_django
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
-VIRTUAL_HOST=logod.pp.ua
+VIRTUAL_HOST=localhost
 VIRTUAL_PORT=8000
-LETSENCRYPT_HOST=logod.pp.ua
+LETSENCRYPT_HOST=localhost
