--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 *.pyc
 __pycache
+env
 .DS_Store
-# .env.dev
-# .env.prod
-# .env.prod.db
+.env.dev
+.env.prod
+.env.prod.db
 
-# .env.staging
-# .env.staging.db
-# .env.prod.proxy-companion
-# .env.staging.proxy-companion
+.env.staging
+.env.staging.db
+.env.prod.proxy-companion
+.env.staging.proxy-companion
